yoshimi 2.1.2 M

2022-3-9 Will
* Corrected envelope info in user guide.

2022-2-15 Will
* BugFix: CLI not correctly listing part contents.

2022-2-11 Hermann
* Changes to make Reverb computations completely reproducible
* Ensure InterpolatedValue stops when passing beyond interpolation-length
* Allow to forcibly push InterpolatedValue to the next target; used for Effect::cleanup()
* Fix spurious AnalogFilter recalculations due to float comparison glitches

2022-2-5 Will
* Added copy of MPE spec to dev_notes.
* Corrected spelling mistakes here!

2022-2-4 Will
* Improved update system for User Guide version

2022-1-20 Will
* Swapped order of bank and main controls in commandSendReal()
  also put comment in for suggested undo/redo location.
* Made Undo and Redo buttons in main inactive to avoid confusion.

2022-1-17 Will
* Set placeholders for Undo/Redo.
* Made additional small adjustments to main window.

2021-12-7 Will
* globals AddVoice1 offset is now defined as NUM_VOICES
* globals AddMod1 offset is now AddVoice1 + NUM_VOICES

2021-12-6 Will
* doc corrections.

2021-12-4 Will
In CMakeLists.txt:
    * added (disabled) option to compile with Clang.
    * added suppression of deprecation warning.
Resolved warnings shown in Clang.

2021-12-3 Will
* Includes compatibility fix for Clang compiler.
* Set minimum C++ version to 14
* set bugfix version 2.1.2.2

2021-11-30 Will
* BugFix: failed to link using recent cmake versions.
  Thanks to David Runge for a timely fix.
* set bugfix version 2.1.2.1

2021-11-29 Will
* Filer window path deactivated if in favourites.
* Disabled difference reporting in midi learn.
* Final doc and user guide updates.
* Set release version 2.1.2

2021-11-24 Will
* Improved recognition of Apply Parameters from MIDI
* doc updates
* Rationalised more Data2Text and Text2Data names.
* CLI can now read midi source and audio destination.
* Set version as 2.1.2 rc2

2021-11-23 Will
* Completed unification of padsynth apply status